update payment system logic