@@ -11,31 +11,45 @@ import Project.paymentgatewaysystem.repository.MerchantUserRepository;
 import Project.paymentgatewaysystem.repository.OrderRepository;
 import Project.paymentgatewaysystem.service.OrderService;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.math.BigDecimal;
 import java.util.List;
+import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class OrderServiceImpl implements OrderService {
 
     private final OrderRepository orderRepository;
     private final MerchantUserRepository merchantUserRepository;
-
+    private MerchantUser getUser(String email) {
+        return merchantUserRepository.findByEmail(email.trim().toLowerCase())
+                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
+    }
     @Override
     @Transactional
     public OrderResponseDto createOrder(String email, OrderRequestDto request) {
-        MerchantUser user = merchantUserRepository.findByEmail(email.trim().toLowerCase())
-                .orElseThrow(() -> new ResourceNotFoundException(
-                        "Merchant not found: " + email));
+        MerchantUser user = getUser(email);
         Merchant merchant=user.getMerchant();
+        BigDecimal amount = Objects.requireNonNull(request.getAmount(), "Amount required");
+        if(amount.compareTo(BigDecimal.ZERO)<=0){
+            throw new IllegalArgumentException("Amount must be positive");
+        }
+        String currency = Objects.requireNonNull(
+                request.getCurrency(), "Currency required"
+        ).toUpperCase();
+
         String ikey =(request.getIdempotencyKey() != null && !request.getIdempotencyKey().isBlank())
                 ? request.getIdempotencyKey()
                 :UUID.randomUUID().toString();
+
+        log.info("Creating order for merchant {}", merchant.getMerchantId());
 
         return orderRepository
                 .findByIdempotencyKeyAndMerchant_MerchantId(ikey, merchant.getMerchantId())
@@ -43,19 +57,27 @@ public class OrderServiceImpl implements OrderService {
                 .orElseGet(()->{
                     Order order = new Order();
                     order.setMerchant(merchant);
-                    order.setAmount(request.getAmount());
-                    order.setCurrency(request.getCurrency().toUpperCase());
+                    order.setAmount(amount);
+                    order.setCurrency(currency);
                     order.setStatus(OrderStatus.CREATED);
                     order.setIdempotencyKey(ikey);
-                    return toDto(orderRepository.save(order));
+                    try {
+                        Order saved = orderRepository.save(order);
+                        log.info("Order created with ID {}", saved.getOrderId());
+                        return toDto(saved);
+                    }catch (Exception ex){
+                        return orderRepository
+                                .findByIdempotencyKeyAndMerchant_MerchantId(ikey,merchant.getMerchantId())
+                                .map(this::toDto)
+                                .orElseThrow();
+                    }
 
                 });
     }
     @Override
     public OrderResponseDto getById( String email,Long orderId) {
 
-        MerchantUser user = merchantUserRepository.findByEmail(email.trim().toLowerCase())
-                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
+        MerchantUser user = getUser(email);
 
         Order order = orderRepository.findById(orderId)
                 .orElseThrow(() -> new ResourceNotFoundException("Order not found: " + orderId));
@@ -70,14 +92,14 @@ public class OrderServiceImpl implements OrderService {
     }
     @Override
     public  List<OrderResponseDto> getByMerchant(String email){
-        MerchantUser user = merchantUserRepository.findByEmail(email.trim().toLowerCase())
-                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
+       MerchantUser user = getUser(email);
 
         Long merchantId = user.getMerchant().getMerchantId();
+        log.info("Fetching orders for merchant {}", merchantId);
         return orderRepository.findByMerchant_MerchantId(merchantId)
                 .stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
     private OrderResponseDto toDto(Order Id) {
         return new OrderResponseDto(
@@ -91,3 +113,5 @@ public class OrderServiceImpl implements OrderService {
         );
     }
 }
+
+
